<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.aerogear.installer</groupId>
    <artifactId>mobile-installer-fx</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>12</maven.compiler.source>
        <maven.compiler.target>12</maven.compiler.target>
        <javafx.version>11.0.2</javafx.version>
        <jfoenix.version>9.0.0</jfoenix.version>

    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>${jfoenix.version}</version>
        </dependency>
        <dependency>
            <groupId>com.openshift</groupId>
            <artifactId>openshift-restclient-java</artifactId>
            <version>8.0.0.Final</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.base/com.sun.javafx.binding=com.jfoenix</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.stage=com.jfoenix</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.base/com.sun.javafx.event=com.jfoenix</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>

                <configuration>
                    <executable>java</executable>
                    <mainClass>org.aerogear.installer.Main</mainClass>
                    <arguments>
                        <argument>--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</argument>
                        <argument>--add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix</argument>
                        <argument>--add-exports javafx.base/com.sun.javafx.binding=com.jfoenix</argument>
                        <argument>--add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix</argument>
                        <argument>--add-exports javafx.base/com.sun.javafx.event=com.jfoenix</argument>
                    </arguments>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>